<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginTop="100dp"/>

            <TextView
                android:id="@+id/tvMandatoryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/mandatory_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvMandatoryText"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_grey_border"
        android:gravity="center_vertical"
        android:elevation="4dp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="12dp"
        android:textColor="@color/color_424242"
        android:textColorHint="@color/color_9e9e9e"
        android:inputType="textEmailAddress|textMultiLine"
        android:hint="@string/email_hint"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/email_error"
        android:textColor="@color/color_e0340b"
        android:textSize="12sp"
        android:visibility="gone"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailError"
        android:layout_margin="20dp"
        android:background="@drawable/bg_grey_border"
        android:gravity="center_vertical"
        android:elevation="4dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/color_424242"
        android:textColorHint="@color/color_9e9e9e"
        android:inputType="text|textMultiLine"
        android:hint="@string/username_hint"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvUserNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/username_error"
        android:textColor="@color/color_e0340b"
        android:textSize="12sp"
        android:visibility="gone"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="@+id/etUserName"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <EditText
        android:id="@+id/etPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvUserNameError"
        android:layout_margin="20dp"
        android:background="@drawable/bg_grey_border"
        android:gravity="center_vertical"
        android:elevation="4dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/color_424242"
        android:textColorHint="@color/color_9e9e9e"
        android:inputType="textPassword|textMultiLine"
        android:hint="@string/password_hint"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/passwordCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPassWord"
        app:layout_constraintStart_toStartOf="@+id/etPassWord"
        android:theme="@style/MyCheckBox"
        android:checked="false"
        android:visibility="gone"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        />

    <TextView
        android:id="@+id/tvShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_424242"
        android:textSize="12sp"
        android:text="@string/show_password"
        android:visibility="gone"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@+id/passwordCheckBox"
        app:layout_constraintTop_toTopOf="@+id/passwordCheckBox"
        app:layout_constraintBottom_toBottomOf="@+id/passwordCheckBox"/>

    <TextView
        android:id="@+id/tvPassWordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/color_e0340b"
        android:textSize="12sp"
        android:text="@string/password_error"
        android:visibility="gone"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="@+id/etPassWord"
        app:layout_constraintTop_toBottomOf="@+id/passwordCheckBox" />

    <TextView
        android:id="@+id/tvPassWordInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/color_424242"
        android:textSize="13sp"
        android:text="@string/password_instruction"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassWordError" />

    <TextView
        android:id="@+id/tvMinPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@color/color_424242"
        android:textSize="12sp"
        android:text="@string/min_password"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassWordInstruction" />

    <TextView
        android:id="@+id/tvOneNumPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/color_424242"
        android:textSize="12sp"
        android:text="@string/one_num_password"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMinPassword" />

    <TextView
        android:id="@+id/tvOneSpecialCharactersPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/color_424242"
        android:textSize="12sp"
        android:text="@string/one_special_characters_password"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOneNumPassword" />

    <TextView
        android:id="@+id/tvOneLowerCharactersPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/color_424242"
        android:textSize="12sp"
        android:text="@string/one_lower_characters_password"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOneSpecialCharactersPassword" />

    <TextView
        android:id="@+id/tvOneUpperCharactersPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/color_424242"
        android:textSize="12sp"
        android:text="@string/one_upper_characters_password"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOneLowerCharactersPassword" />

            <Spinner
                android:id="@+id/countryListView"
                android:textSize="14sp"
                android:textColor="@color/color_424242"
                android:maxLines="1"
                android:ellipsize="end"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:elevation="4dp"
                android:background="@drawable/spinner_background"
                android:textColorHint="@color/color_9e9e9e"
                app:layout_constraintTop_toBottomOf="@+id/tvOneUpperCharactersPassword"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvCountryError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/country_error"
                android:textColor="@color/color_e0340b"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toStartOf="@+id/countryListView"
                app:layout_constraintTop_toBottomOf="@+id/countryListView" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:backgroundTint="@color/color_e0340b"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCountryError"
                android:layout_margin="20dp"
                android:text="@string/btn_sign_up" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressContainer"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressCircular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indeterminateAnimationType="contiguous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>