<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvBookTitleHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@color/color_3F78B5"
        android:text="@string/app_name"
        android:textSize="25sp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBookTitleHeading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivBook"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvBookTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color_424242"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:text="Book Title"
        app:layout_constraintTop_toTopOf="@+id/ivBook"
        app:layout_constraintStart_toEndOf="@+id/ivBook"
        app:layout_constraintEnd_toStartOf="@+id/ivBookMark"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/tvBookScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_FFCE3B"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="24.6"
        app:layout_constraintStart_toStartOf="@+id/tvBookTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvBookTitle"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/tvBookPublishedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_424242"
        android:textSize="11sp"
        tools:text="Book Title"
        app:layout_constraintStart_toStartOf="@+id/tvBookScore"
        app:layout_constraintTop_toBottomOf="@+id/tvBookScore"
        android:layout_marginTop="2dp"
        />

    <ImageView
        android:id="@+id/ivBookMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_white_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBook"
        app:layout_constraintBottom_toBottomOf="@+id/ivBook"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />

            <ImageView
                android:id="@+id/ivTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivBook"
                app:layout_constraintBottom_toTopOf="@+id/rvTagsList"
                android:layout_marginEnd="20dp"
                android:layout_marginVertical="20dp"
                />

            <EditText
                android:id="@+id/etTags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ivBook"
                app:layout_constraintBottom_toTopOf="@+id/rvTagsList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnAddTags"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/bg_grey_border"
                android:elevation="4dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/color_424242"
                android:textColorHint="@color/color_9e9e9e"
                android:visibility="gone"
                android:inputType="text|textMultiLine"
                android:hint="@string/tags_hint"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnAddTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:backgroundTint="@color/color_e0340b"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@+id/etTags"
                app:layout_constraintBottom_toBottomOf="@+id/etTags"
                app:layout_constraintStart_toEndOf="@+id/etTags"
                app:layout_constraintEnd_toStartOf="@+id/ivTag"
                android:layout_margin="10dp"
                android:text="@string/btn_add_tags" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTagsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/etTags" />
    
    <TextView
        android:id="@+id/tvLorem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rvTagsList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textColor="@color/color_424242"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:textSize="14sp"
        />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>